modify the files

--- a/public/taxi-agadir-aeroport-agadir.html
+++ b/public/taxi-agadir-aeroport-agadir.html
@@ -106,11 +106,11 @@
       <div class="dashed-line" ></div>
       <section class="activity-main-content">
         <div class="activity-description">
-          <p>Agadir, la perle balnéaire du Maroc, offre des plages dorées, un climat agréable et une expérience de voyage sans égal. Réservez facilement un taxi pour des transferts en toute confiance et profitez d'un confort optimal tout au long de votre séjour.</p>
-          <p>Avec nos <strong>services de taxi à Agadir</strong>, découvrez une ville mêlant authenticité et modernité. Que ce soit pour des déplacements privés ou professionnels, nous assurons des trajets confortables et adaptés à vos besoins.</p>
-          <p><strong>Réservez votre taxi Agadir</strong> et profitez d’un transfert rapide et confortable vers la capitale balnéaire du sud. Découvrez ses plages ensoleillées, sa marina animée et ses panoramas depuis la Kasbah.</p>
-          <p>Profitez des plages dorées d'Agadir, essayez les sports nautiques vivifiants et explorez les trésors cachés de cette ville côtière fascinante.</p>
-      </div>
+            <p>Agadir, perle balnéaire du Maroc, séduit par ses plages dorées, son climat agréable et son ambiance détendue. Pour rejoindre Agadir City depuis l’aéroport en toute sérénité, optez pour un taxi privé Agadir Aéroport.</p>
+            <p>Réservez facilement votre taxi Agadir Aéroport vers Agadir City pour un transfert confortable, rapide et sécurisé. Que ce soit pour un séjour touristique, un voyage d’affaires ou un déplacement privé, profitez d’un service fiable et ponctuel.</p>
+            <p>Avec notre service de taxi, bénéficiez d’un trajet direct et sans tracas vers le centre-ville d’Agadir. Admirez les plages ensoleillées, la marina animée et les panoramas depuis la Kasbah tout en voyageant confortablement.</p>
+            <p>Nos chauffeurs professionnels vous garantissent un transfert pratique et agréable depuis l’aéroport jusqu’à votre destination à Agadir City. Réservez en ligne votre taxi Agadir Aéroport et commencez votre séjour en toute tranquillité.</p>
+          </div>          
       <div class="activity-time">
           <div>
               <h2>DESTINATION</h2>
@@ -125,18 +125,18 @@
           <img src="/images/agadir-main.jpg" alt="Agadir marina" srcset="/images/agadir-main_550.jpg 550w, /images/agadir-main_650.jpg 650w, /images/agadir-main_800.jpg 800w, /images/agadir-main_950.jpg 950w, /images/agadir-main_1080.jpg 1080w, /images/agadir-main_1250.jpg 1250w, /images/agadir-main.jpg 1450w">
         </div>
         <div class="additionnal-infos">
-          <h2>ACTIVITE À DECOUVRIR AVEC UN TAXI À AGADIR</h2>
-          <ul>
-              <li>Sites historiques</li>
-              <li>Détente sur les plages</li>
-              <li>Activités sportives</li>
-              <li>Shopping local</li>
-          </ul>
-      </div>
-      <div class="additionnal-infos-two">
-          <h2>PLUS</h2>
-          <p>Avec notre service de taxi Marrakech Agadir, voyagez en toute sérénité vers cette destination incontournable. Entre plages dorées, climat ensoleillé et ambiance détendue, Agadir est idéale pour vos vacances au bord de l’océan.</p>
-      </div>
+            <h2>ACTIVITÉS À DÉCOUVRIR À AGADIR</h2>
+            <ul>
+              <li>Exploration des sites historiques et de la Kasbah</li>
+              <li>Détente sur les plages dorées et baignade</li>
+              <li>Activités nautiques et sportives : surf, jet-ski, paddle</li>
+              <li>Shopping artisanal et marchés locaux</li>
+            </ul>
+          </div>
+          <div class="additionnal-infos-two">
+            <h2>PLUS</h2>
+            <p>Avec notre service de taxi Agadir Aéroport vers Agadir City, profitez d’un transfert privé, confortable et sécurisé. Découvrez cette ville balnéaire avec ses plages ensoleillées, sa marina animée et son ambiance détendue, idéale pour un séjour au bord de l’océan.</p>
+          </div>          
       </section>
       <section class="testimonial">
         <div class="testimonial-container">
@@ -167,38 +167,6 @@
                <td>30€</td>
                <td>5 &gt; 8 Pers</td>
                <td>40€</td>
-               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
-            </tr>
-            <tr>
-               <td>Agadir &gt; Marrakech</td>
-               <td>1 &gt; 4 Pers</td>
-               <td>100€</td>
-               <td>5 &gt; 8 Pers</td>
-               <td>120€</td>
-               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
-            </tr>
-            <tr>
-               <td>Agadir &gt; Essaouira</td>
-               <td>1 &gt; 4 Pers</td>
-               <td>70€</td>
-               <td>5 &gt; 8 Pers</td>
-               <td>80€</td>
-               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
-            </tr>
-            <tr>
-               <td>Agadir &gt; Casablanca</td>
-               <td>1 &gt; 4 Pers</td>
-               <td>250€</td>
-               <td>5 &gt; 8 Pers</td>
-               <td>300€</td>
-               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
-            </tr>
-            <tr>
-               <td>Agadir &gt; Taroudant</td>
-               <td>1 &gt; 4 Pers</td>
-               <td>70€</td>
-               <td>5 &gt; 8 Pers</td>
-               <td>80€</td>
                <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
          </tbody></table>
