modify the files

--- a/public/taxi-agadir-taghazout.html
+++ b/public/taxi-agadir-taghazout.html
@@ -106,11 +106,11 @@
       <div class="dashed-line" ></div>
       <section class="activity-main-content">
         <div class="activity-description">
-          <p>Situé sur la côte atlantique marocaine, à environ 20 km au nord d'Agadir, Taghazout est un charmant village de pêcheurs devenu une destination prisée pour les amateurs de surf et les amoureux de la nature.</p>
-          <p>Avec notre service de <strong>taxi Taghazout</strong>, rejoignez facilement ce village de pêcheurs devenu paradis du surf. Entre plages sauvages, ambiance décontractée et vagues mondialement connues, Taghazout est la destination idéale pour les amoureux de l’océan.</p>
-          <p>Connue pour ses plages immaculées et ses vagues parfaites, cette perle côtière offre un mélange unique de tranquillité et d'aventure.</p>
-          <p>À Taghazout, vous pouvez profiter du surf sur des vagues de renommée mondiale, explorer les paysages époustouflants de l'Anti-Atlas, ou vous détendre avec des séances de yoga en bord de mer.</p>
-        </div>
+            <p>Situé sur la côte atlantique, à seulement 20 km au nord d'Agadir, Taghazout est un charmant village de pêcheurs devenu une destination prisée pour le surf et les amoureux de la nature.</p>
+            <p>Réservez facilement votre <strong>taxi Agadir → Taghazout</strong> pour un transfert direct, confortable et sécurisé. Profitez d’un trajet sans stress pour rejoindre ce village accueillant, célèbre pour ses plages sauvages et ses vagues mondialement reconnues.</p>
+            <p>Taghazout combine détente et aventure : plages immaculées, spots de surf renommés et paysages spectaculaires de l'Anti-Atlas, parfaits pour les randonnées et la découverte de la région.</p>
+            <p>Durant votre séjour, vous pourrez pratiquer le surf sur des vagues idéales, explorer les panoramas naturels ou profiter de séances de yoga en bord de mer, le tout facilement accessible grâce à votre taxi Agadir Taghazout.</p>
+          </div>          
         <div class="activity-time">
           <div>
             <h2>DESTINATION</h2>
@@ -125,18 +125,18 @@
           <img src="/images/taghazout-main.webp" alt="Taghazout Bay" srcset="/images/taghazout-main_550.webp 550w, /images/taghazout-main_650.webp 650w, /images/taghazout-main_800.webp 800w, /images/taghazout-main_950.webp 950w, /images/taghazout-main_1080.webp 1080w, /images/taghazout-main_1250.webp 1250w, /images/taghazout-main.webp 1450w">
         </div>
         <div class="additionnal-infos">
-          <h2>ACTIVITE À DECOUVRIR AVEC UN TAXI À TAGHAZOUT </h2>
-          <ul>
-            <li>Des plages</li>
-            <li>Cuisine traditionnelle</li>
-            <li>Cuisine marocaine</li>
-            <li>La nature</li>
-          </ul>
-        </div>
-        <div class="additionnal-infos-two">
-          <h2>PLUS</h2>
-          <P>Entre sable doré, vagues parfaites et atmosphère détendue, Taghazout est la destination rêvée pour les passionnés de mer et de soleil.</P>
-        </div>
+            <h2>ACTIVITÉS À DÉCOUVRIR À TAGHAZOUT</h2>
+            <ul>
+              <li>Détente sur les plages dorées et baignade</li>
+              <li>Surf et sports nautiques</li>
+              <li>Découverte de la cuisine traditionnelle marocaine</li>
+              <li>Randonnées et exploration de la nature environnante</li>
+            </ul>
+          </div>
+          <div class="additionnal-infos-two">
+            <h2>PLUS</h2>
+            <p>Avec notre service de taxi Agadir → Taghazout, profitez d’un transfert confortable et sécurisé vers ce village côtier. Entre sable doré, vagues parfaites et ambiance détendue, Taghazout est la destination idéale pour les passionnés de surf, de soleil et de nature.</p>
+          </div>          
       </section>
       <section class="testimonial">
         <div class="testimonial-container">
