modify the files

--- a/public/taxi-marrakech-rabat.html
+++ b/public/taxi-marrakech-rabat.html
@@ -25,7 +25,7 @@
   <noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-ND4CTK2S" style="display:none;visibility:hidden" width="0"></iframe></noscript>
     <header class="activities">
         <p class="notification">Bienvenue chez Taxis To Marrakech !!</p>
-        <div class="header-container marrakech">
+        <div class="header-container rabat">
           <nav>
             <div class="menu-btn">
                 <button class="custom-svg-btn" aria-label="Open menu" aria-controls="main-menu" aria-expanded="false">
