modify the files

--- a/public/destination.html
+++ b/public/destination.html
@@ -187,6 +187,21 @@
                             </div>
                         </div>
                     </article>
+                    <article class="tour-informations">
+                      <div class="tours-infos-container">
+                          <div class="tour-img">
+                              <a href="/taghazout.html">
+                                  <img src="/images/rabat-main.jpeg" alt="Rabat oudaya" 
+                                      srcset="/images/rabat-main_550.jpeg 550w, /images/rabat-main_650.jpeg 650w, /images/rabat-main_800.jpeg 800w, /images/rabat-main_950.jpeg 950w">
+                              </a>
+                              <a href="/taxi-marrakech-rabat.html" class="btn explore hover-btn tours-btn">VOIR DÉTAILS</a>
+                          </div>
+                          <div class="tour-title">
+                            <h4>Rabat</h4>
+                            <p>Réservez un <strong>taxi Marrakech Rabat</strong> et découvrez la capitale marocaine, entre monuments historiques, front de mer animé et ambiance culturelle unique.</p>
+                          </div>                          
+                      </div>
+                  </article>
                 </div>                
                   </div>
               </section>
