--- a/public/taxi-marrakech-rabat.html
+++ b/public/taxi-marrakech-rabat.html
@@ -122,7 +122,7 @@
           </div>
       </div>
         <div class="main-activity-img">
-          <img src="/images/rabat-main.jpeg" alt="les Jardins de menara" srcset="/images/rabat-main_550.jpeg 550w, /images/rabat-main_650.jpeg 650w, /images/rabat-main_800.jpeg 800w, /images/rabat-main_950.jpeg 950w, /images/rabat-main_1080.jpeg 1080w, /images/rabat-main_1250.jpeg 1250w, /images/rabat-main.jpeg 1450w">
+          <img src="/images/rabat-main.jpeg" alt="Rabat Oudaya" srcset="/images/rabat-main_550.jpeg 550w, /images/rabat-main_650.jpeg 650w, /images/rabat-main_800.jpeg 800w, /images/rabat-main_950.jpeg 950w, /images/rabat-main_1080.jpeg 1080w, /images/rabat-main_1250.jpeg 1250w, /images/rabat-main.jpeg 1450w">
         </div>
         <div class="additionnal-infos">
             <h2>ACTIVITÉS À DÉCOUVRIR À RABAT</h2>
