modify the files

--- a/public/destination.html
+++ b/public/destination.html
@@ -202,6 +202,21 @@
                           </div>                          
                       </div>
                   </article>
+                  <article class="tour-informations">
+                    <div class="tours-infos-container">
+                        <div class="tour-img">
+                            <a href="/taxi-marrakech-sidi-kaouki.html">
+                                <img src="/images/sidi-kaouki-main.jpg" alt="sidi kaouki plage" 
+                                    srcset="/images/sidi-kaouki-main_550.jpg 550w, /images/sidi-kaouki-main_650.jpg 650w, /images/sidi-kaouki-main_800.jpg 800w, /images/sidi-kaouki-main_950.jpg 950w">
+                            </a>
+                            <a href="/taxi-marrakech-rabat.html" class="btn explore hover-btn tours-btn">VOIR DÉTAILS</a>
+                        </div>
+                        <div class="tour-title">
+                          <h4>Sidi Kaouki</h4>
+                          <p>Réservez un <strong>taxi Marrakech Rabat</strong> et découvrez la capitale marocaine, entre monuments historiques, front de mer animé et ambiance culturelle unique.</p>
+                        </div>                          
+                    </div>
+                </article>
                 </div>                
                   </div>
               </section>
