modify the files

--- a/public/destination.html
+++ b/public/destination.html
@@ -213,7 +213,7 @@
                         </div>
                         <div class="tour-title">
                           <h4>Sidi Kaouki</h4>
-                          <p>Réservez un <strong>taxi Marrakech Rabat</strong> et découvrez la capitale marocaine, entre monuments historiques, front de mer animé et ambiance culturelle unique.</p>
+                          <p>Réservez un <strong>taxi Marrakech Sidi Kaouki</strong> et découvrez ce village côtier paisible, réputé pour ses plages sauvages, ses spots de surf et son atmosphère détendue au bord de l’océan.</p>
                         </div>                          
                     </div>
                 </article>
