modify the files

--- a/public/destination.html
+++ b/public/destination.html
@@ -209,7 +209,7 @@
                                 <img src="/images/sidi-kaouki-main.jpg" alt="sidi kaouki plage" 
                                     srcset="/images/sidi-kaouki-main_550.jpg 550w, /images/sidi-kaouki-main_650.jpg 650w, /images/sidi-kaouki-main_800.jpg 800w, /images/sidi-kaouki-main_950.jpg 950w">
                             </a>
-                            <a href="/taxi-marrakech-rabat.html" class="btn explore hover-btn tours-btn">VOIR DÉTAILS</a>
+                            <a href="/taxi-marrakech-sidi-kaouki.html" class="btn explore hover-btn tours-btn">VOIR DÉTAILS</a>
                         </div>
                         <div class="tour-title">
                           <h4>Sidi Kaouki</h4>
