modify the files

--- a/public/taxi-marrakech-sidi-kaouki.html
+++ b/public/taxi-marrakech-sidi-kaouki.html
@@ -145,7 +145,7 @@
             <p style="color: #081c2b;">Consultez nos tarifs et réservez votre taxi dès maintenant</p> 
         </div>
         <div class="testimonial-cards-container" style="width: 95%;">
-          <table><tbody><tr><th>Trajets</th><th>Personnes</th><th>Prix</th><th>Personnes</th><th>Prix</th><th>Réservation</th></tr><tr><td>Essaouira &gt; Marrakech</td><td>1 &gt; 4 Pers</td><td>65€</td><td>5 &gt; 8 Pers</td><td>80€</td><td><a href="/contact#reservation-form">Réservez votre taxi</a></td></tr></tbody></table>
+          <table><tbody><tr><th>Trajets</th><th>Personnes</th><th>Prix</th><th>Personnes</th><th>Prix</th><th>Réservation</th></tr><tr><td>Marrakech &gt; Sidi Kaouki</td><td>1 &gt; 4 Pers</td><td>65€</td><td>5 &gt; 8 Pers</td><td>80€</td><td><a href="/contact#reservation-form">Réservez votre taxi</a></td></tr></tbody></table>
         </div>
       </section>
       <section class="tours" aria-labelledby="our Tours">
