modify the files

--- a/public/confidentialite.html
+++ b/public/confidentialite.html
@@ -49,6 +49,7 @@
     pointer-events: none;
     }
  </style>
+ <link rel="stylesheet" href="/css/main.css">
   </head>
  <body>
   <!-- Google Tag Manager (noscript) -->
