--- a/public/confidentialite.html
+++ b/public/confidentialite.html
@@ -56,7 +56,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ND4CTK2S"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <div id="fixed" class="fixed-navbar">
+  <!-- <div id="fixed" class="fixed-navbar">
     <div class="nav-bg">
        <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
           
@@ -85,7 +85,7 @@
           </div>
        </div>
     </div>
- </div>
+ </div> -->
 <div class="html-embed w-embed">
    <style>
       @media only screen and (min-width: 992px) and (max-width: 1600px)  {
@@ -111,7 +111,7 @@
       .menu-scroller { -ms-overflow-style: none; }
    </style>
 </div>
-<div class="menu-wrapper">
+<!-- <div class="menu-wrapper">
  <div class="menu-bg"></div>
  <div class="navigation-menu">
      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-menu w-nav">
@@ -332,7 +332,7 @@
                   </div>
       </div>
   </div>
-</div>
+</div> -->
    <main>
     <header>
       <h1 class="title">Confidentialité</h1>
