Add JSON-LD schema for Taxis To Marrakech homepage

--- a/public/contact.html
+++ b/public/contact.html
@@ -406,7 +406,7 @@
                <a href="/contact.html" class="btn hover-btn">Réservez votre taxi</a>
             </div>
          </section>
-         <div style="position:relative; width:100%; height:0; padding-bottom:56.25%;">
+         <div style="position:relative; width:100%; height:450px; padding-bottom:56.25%;">
   <iframe 
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d108749.7231861944!2d-8.172948602734403!3d31.594706800000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x64fc177beceb0d5b%3A0x8c56752082647220!2sTaxis%20To%20Marrakech!5e0!3m2!1sfr!2sma!4v1769679456103!5m2!1sfr!2sma" 
     style="border:0; position:absolute; top:0; left:0; width:100%; height:100%;" 
